--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -12,7 +12,7 @@ body {
 
 .business-header {
     height: 400px;
-    background: url('/images/background_alt.jpg') center center no-repeat scroll;
+    background: url('https://imaginarysense.github.io/ATH-movil-SDKs-demo-website/images/background_alt.jpg') center center no-repeat scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
